# factory-planner

./: .gitignore  pyproject.toml  schema.json
factory_planner/loader/: __init__.py  schema.py
factory_planner/simulator/: satisfactory.py  supply_chain.py
satisfactory/: buildings.yaml  items.yaml  recipes.yaml
